@@ -1,1 +1,1 @@
-1.6.1.22
+1.6.1.24
